objects/Matchback__c.object
<CustomObject>
    <fields>
        <fullName>Matchback_Date__c</fullName>
        <label>Retail Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Matchback_Status__c</fullName>
        <label>Matchback Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Matched to Dealer</fullName>
                </value>
                <value>
                    <fullName>Matched to other Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matchback</relationshipLabel>
        <relationshipName>Matchback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RDR_Sales__c</fullName>
        <label>RDR Sales</label>
        <referenceTo>RDR_Sales__c</referenceTo>
        <relationshipLabel>Matchback</relationshipLabel>
        <relationshipName>Matchback</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Matchback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>RDR_Sales__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Matchback_Date__c</columns>
        <columns>Matchback_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Matchback_Date__c</field>
            <operation>equals</operation>
            <value>9/30/2023</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Matchback - {0000000}</displayFormat>
        <label>Matchback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matchback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>